--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "chisel-bootcamp"]
 	path = chisel-bootcamp
 	url = https://github.com/freechipsproject/chisel-bootcamp.git
+[submodule "rocket-chip"]
+	path = rocket-chip
+	url = https://github.com/chipsalliance/rocket-chip
