--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "rocket-chip"]
 	path = rocket-chip
 	url = https://github.com/chipsalliance/rocket-chip
+[submodule "chipyard"]
+	path = chipyard
+	url = https://github.com/ucb-bar/chipyard.git
